; ModuleID = '/home/carl/AnghaBench/streem/src/extr_random.c_gen_rand.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_random.c_gen_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.rand_data* }
%struct.rand_data = type { i32 }

@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32)* @gen_rand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gen_rand(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.rand_data*, align 8
  %6 = alloca double, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load %struct.rand_data*, %struct.rand_data** %8, align 8
  store %struct.rand_data* %9, %struct.rand_data** %5, align 8
  %10 = load %struct.rand_data*, %struct.rand_data** %5, align 8
  %11 = getelementptr inbounds %struct.rand_data, %struct.rand_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call double @rand_float(i32 %12)
  store double %13, double* %6, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %15 = load double, double* %6, align 8
  %16 = call i32 @strm_float_value(double %15)
  %17 = call i32 @strm_emit(%struct.TYPE_5__* %14, i32 %16, i32 (%struct.TYPE_5__*, i32)* @gen_rand)
  %18 = load i32, i32* @STRM_OK, align 4
  ret i32 %18
}

declare dso_local double @rand_float(i32) #1

declare dso_local i32 @strm_emit(%struct.TYPE_5__*, i32, i32 (%struct.TYPE_5__*, i32)*) #1

declare dso_local i32 @strm_float_value(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
